# three-of-a-crime

./: .coverage  .coveragerc  .editorconfig  .gitignore  .travis.yml  README.md  dealer.py  example.json  pyproject.toml  requirements.txt  tests.py
.github/workflows/: tests.yml
tests/: decorators.py  test_compliance.py  test_dealer.py  test_player.py
toac/: dealer.py  example.json  player.py
