[project]
name = "three-of-a-crime"
version = "1.0.0"
description = "Solver and dealer programs for the Three of a Crime deduction game."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[project.scripts]
toac = "toac.dealer:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "tomli>=2.2.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Coverage.py configuration migrated from legacy .coveragerc
[tool.coverage.run]
branch = true
source = ["toac"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
]
